feat: add style

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <title>Zttu's Github</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Zttu's Github Page</h1>
-        <p>Howdy and enjoy your day</p>
+        <div class="center">
+            <h1>Zttu's Github</h1>
+            <p>Howdy and enjoy your day</p>
+        </div>
     </body>
 </html>
